# library-optimizer

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
src/: main.rs
src/config/: logging.rs  mod.rs  runtime.rs
src/database/: migrations.rs  mod.rs  pool.rs
src/server/: mod.rs
src/server/routes/: mod.rs
src/server/routes/v1/: hello_world.rs  mod.rs
