[package]
name = "library-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.6" }
notify = { version = "6.1.1" }
num_cpus = { version = "1.16.0" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tower-http = { version = "0.6.1", features = ["trace", "compression-gzip"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
